# nginx-monitor

./: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: main.yml
src/: config.rs  main.rs
src/handler/: auth.rs  mod.rs  sse.rs
src/metrics/: access_log.rs  mod.rs  stub_status.rs  system.rs
